@@ -12,14 +12,14 @@ CC_EXPERIMENT_DEFINITIONS
     {
         name = HMI
 
-        validBody = Sun
+        sunOnly = true
     }
 
     EXPERIMENT
     {
         name = STEREO
 
-        validBody = Sun
+        sunOnly = true
     }
 
     MODULE
