@@ -1,4 +1,5 @@
 Contract Configurator 1.21.1
+- Make references to 'Sun' generic in SolarScience.cfg to fix Galileo compatibility (thanks SirBriguy).
 - Change Vessel Identifier parsing to allow a wider range of characters.
 - Fixed format text for funding message in mission control (thanks JPLRepo).
 - Fixed issue with NextUnreachedBody() call caching results (thanks severedsolo).
